[package]
name = "actix-ipquery"
version = "0.1.1"
edition = "2021"
authors = ["Oleg Pogoraev <merizo.labs@gmail.com>"]
description = "A Rust library to retrieve info about IP of incoming requests for actix-web."
readme = "README.md"
keywords = ["ipquery", "networking", "api", "actix-web", "backend"]
categories = ["network-programming"]
homepage = "https://github.com/oblivisheee/actix-ipquery"
license-file = "LICENSE"
[dependencies]
actix-web = "4.9.0"
futures-util = "0.3.31"
ipapi = "0.1.0"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt"] }
